Update markup and styles

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -9,12 +9,11 @@ permalink: /
   {% include site-header.html %}
   <main role="main" id="main">
     <section class="overview">
-      <div class="inner-wrap">
+
+      <div class="wrapper">
+        <img src="images/sidebar.png" alt="">
         <div class="search-results-chunks">
           <div class="search-results-chunk" data-next-page-url="/labs/pubmed/more/?term=otitis+media+treatment&amp;page=2" data-page-number="1" data-results-amount="17,692" data-pages-amount="1770">
-            <div class="title first">
-              <span class="text">Page 1</span>
-            </div>
             <article class="labs-full-docsum">
               <div class="docsum-content">
                 <a class="labs-docsum-title" href="/labs/pubmed/24134083/?from_term=otitis+media+treatment&amp;from_pos=1" ref="linksrc=docsum_link&amp;article_id=24134083&amp;ordinalpos=0&amp;page=1">
